--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
+blinker==1.4
+certifi==2022.6.15
+charset-normalizer==2.1.0
 click==8.0.1
 Flask==2.0.1
+Flask-DebugToolbar==0.11.0
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.0
+gunicorn==20.1.0
+idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
 psycopg2-binary==2.9.3
+requests==2.28.1
 SQLAlchemy==1.4.18
+urllib3==1.26.9
 Werkzeug==2.0.1
-Flask-DebugToolbar==0.11.0
-requests==2.28.0
